k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-example
spec:
  template:
    spec:
      containers:
        - name: app
          image: quay.io/larsks/example:flaskapp

        - name: nginx
          image: docker.io/nginx:mainline
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
