k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-example
spec:
  ports:
    - port: 80
      targetPort: http
      name: http
