k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-example
spec:
  rules:
  - host: "flask-example"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: flask-example
            port:
              name: http
